FLY wire David/force-app/main/default/objects/Email_Table__mdt/Email_Table__mdt.object-meta.xml
<CustomObject>
    <description>SALDEV-1420
This custom metadata is created to store fields to be displayed in emails tables.</description>
    <label>Email Table</label>
    <pluralLabel>Email Tables</pluralLabel>
</CustomObject>