FLY wire David/force-app/main/default/objects/Email_Table__mdt/fields/Column_Header__c.field-meta.xml
<CustomField>
    <fullName>Column_Header__c</fullName>
    <description>Field Name which will be displayed in as column header.</description>
    <label>Column Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>