FLY wire David/force-app/main/default/objects/Email_Table__mdt/fields/Column_Order__c.field-meta.xml
<CustomField>
    <fullName>Column_Order__c</fullName>
    <description>Order in which field should be present in table.</description>
    <label>Column Order</label>
    <length>20</length>
    <type>Text</type>
</CustomField>