FLY wire David/force-app/main/default/objects/Email_Table__mdt/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <description>Name of email template where field is needed in table</description>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>