FLY wire David/force-app/main/default/objects/Email_Table__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of field to be needed in OpportunityLineItem table.</description>
    <label>Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>