FLY wire David/force-app/main/default/objects/Email_Table__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Column_Header__c</columns>
    <columns>Column_Order__c</columns>
    <columns>Email_Template__c</columns>
    <columns>Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>